k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: k8s-dashboard-route
  namespace: k8s-dashboard
spec:
  parentRefs:
    - name: main-gateway
      namespace: gateway-system
  hostnames:
    - "status.imhyuk.kr"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: k8s-dashboard-svc
          port: 80
